# Robotics_Assignment

./: DETAILED_PROJECT_REPORT_FOR_WORD.txt  EXECUTIVE_SUMMARY.txt  PROJECT_REPORT.md  README_REPORTS.txt  direct_monitor.py  fix_map_transform.py  move_robot.py
medbot_ws/: .gitignore  README.md  test_simulation.sh
medbot_ws/docs/images/: .gitkeep
medbot_ws/src/medbot_bringup/: CMakeLists.txt  package.xml
medbot_ws/src/medbot_bringup/launch/: medbot_bringup.launch.py  simulation_only.launch.py  teleop.launch.py
medbot_ws/src/medbot_bringup/rviz/: navigation.rviz
medbot_ws/src/medbot_description/: CMakeLists.txt  package.xml
medbot_ws/src/medbot_description/launch/: display.launch.py
medbot_ws/src/medbot_description/meshes/: .gitkeep
medbot_ws/src/medbot_description/rviz/: display.rviz
medbot_ws/src/medbot_description/urdf/: gazebo_control.xacro  materials.xacro  medbot.urdf.xacro  robot_core.xacro
medbot_ws/src/medbot_description/urdf/sensors/: camera.xacro  imu.xacro  lidar.xacro
medbot_ws/src/medbot_gazebo/: CMakeLists.txt  package.xml
medbot_ws/src/medbot_gazebo/launch/: gazebo_harmonic.launch.py  gazebo_headless.launch.py  gazebo_simulation.launch.py
medbot_ws/src/medbot_gazebo/models/: .gitkeep
medbot_ws/src/medbot_gazebo/models/medbot/: model.config  model.sdf
medbot_ws/src/medbot_gazebo/scripts/: spawn_robot.py
medbot_ws/src/medbot_gazebo/worlds/: addis_ababa_urban.world  empty_test.world  simple_urban.world
medbot_ws/src/medbot_localization/: CMakeLists.txt  package.xml
medbot_ws/src/medbot_localization/config/: amcl_params.yaml  ekf_params.yaml  slam_toolbox_params.yaml
medbot_ws/src/medbot_localization/launch/: ekf.launch.py  localization.launch.py  slam.launch.py
medbot_ws/src/medbot_localization/maps/: .gitkeep
medbot_ws/src/medbot_localization/medbot_localization/: odom_tf_broadcaster.py
medbot_ws/src/medbot_mission/: package.xml  setup.cfg  setup.py
medbot_ws/src/medbot_mission/config/: mission_params.yaml
medbot_ws/src/medbot_mission/launch/: mission.launch.py
medbot_ws/src/medbot_mission/medbot_mission/: __init__.py  delivery_manager.py  emergency_stop.py  obstacle_detector.py  status_monitor.py  waypoint_publisher.py
medbot_ws/src/medbot_mission/resource/: medbot_mission
medbot_ws/src/medbot_navigation/: CMakeLists.txt  package.xml
medbot_ws/src/medbot_navigation/behavior_trees/: .gitkeep
medbot_ws/src/medbot_navigation/config/: nav2_params.yaml
medbot_ws/src/medbot_navigation/launch/: navigation.launch.py
medbot_ws/src/medbot_navigation/maps/: .gitkeep
