<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>medbot_bringup</name>
  <version>1.0.0</version>
  <description>
    Bringup package for Medical Delivery Robot.
    Contains launch files for complete system startup including
    robot, simulation, SLAM, and navigation.
  </description>
  <maintainer email="team@ethio-medbot.com">MedBot Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>medbot_description</exec_depend>
  <exec_depend>medbot_gazebo</exec_depend>
  <exec_depend>medbot_navigation</exec_depend>
  <exec_depend>medbot_localization</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
