<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>medbot_gazebo</name>
  <version>1.0.0</version>
  <description>
    Gazebo simulation worlds for the Medical Delivery Robot.
    Contains Ethiopian urban environment (Addis Ababa style) with traffic,
    pedestrians, and infrastructure challenges.
  </description>
  <maintainer email="team@ethio-medbot.com">MedBot Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>

  <exec_depend>medbot_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
