<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>medbot_localization</name>
  <version>1.0.0</version>
  <description>
    Localization package for Medical Delivery Robot.
    Module Owner: Abenezer (Localization)
    
    Contains:
    - SLAM Toolbox configuration
    - AMCL configuration for localization
    - EKF sensor fusion configuration
    - Map management utilities
  </description>
  <maintainer email="abenezer@ethio-medbot.com">Abenezer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
