<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>medbot_mission</name>
  <version>1.0.0</version>
  <description>
    Mission control package for Medical Delivery Robot.
    Module Owner: Netsanet (Obstacle Avoidance) with team collaboration
    
    Contains:
    - Delivery Manager node for handling delivery missions
    - Waypoint publisher for delivery routes
    - Status monitor for system health
    - Emergency stop handler
  </description>
  <maintainer email="netsanet@ethio-medbot.com">Netsanet</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>action_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
